test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/conflicting_function_linkage_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  (
  void
  )
  ;
  return
  identifier(foo)
  (
  )
  ;
  }
  static
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
